logs/dag_id=example_postgres_pandas_dag_with_decorators/run_id=manual__2024-09-26T23:24:07.838919+00:00/task_id=read_data_from_api/attempt=2.log
[2024-09-26T23:29:50.640+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-09-26T23:29:52.086+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: example_postgres_pandas_dag_with_decorators.read_data_from_api manual__2024-09-26T23:24:07.838919+00:00 [queued]>
[2024-09-26T23:29:52.508+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: example_postgres_pandas_dag_with_decorators.read_data_from_api manual__2024-09-26T23:24:07.838919+00:00 [queued]>
[2024-09-26T23:29:52.509+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2024-09-26T23:30:03.026+0000] {taskinstance.py:2330} INFO - Executing <Task(_PythonDecoratedOperator): read_data_from_api> on 2024-09-26 23:24:07.838919+00:00
[2024-09-26T23:30:03.373+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=94501) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-09-26T23:30:03.387+0000] {standard_task_runner.py:63} INFO - Started process 94523 to run task
[2024-09-26T23:30:03.314+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'example_postgres_pandas_dag_with_decorators', 'read_data_from_api', 'manual__2024-09-26T23:24:07.838919+00:00', '--job-id', '98', '--raw', '--subdir', 'DAGS_FOLDER/etl_prueba.py', '--cfg-path', '/tmp/tmp5rav81mr']
[2024-09-26T23:30:03.403+0000] {standard_task_runner.py:91} INFO - Job 98: Subtask read_data_from_api
[2024-09-26T23:30:03.803+0000] {task_command.py:426} INFO - Running <TaskInstance: example_postgres_pandas_dag_with_decorators.read_data_from_api manual__2024-09-26T23:24:07.838919+00:00 [running]> on host 5e909a8df6c4
[2024-09-26T23:30:05.256+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='example_postgres_pandas_dag_with_decorators' AIRFLOW_CTX_TASK_ID='read_data_from_api' AIRFLOW_CTX_EXECUTION_DATE='2024-09-26T23:24:07.838919+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-09-26T23:24:07.838919+00:00'
[2024-09-26T23:30:05.264+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-09-26T23:30:05.333+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-09-26T23:30:06.067+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/urllib3/connectionpool.py:1103 InsecureRequestWarning: Unverified HTTPS request is being made to host 'api.bcra.gob.ar'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings
[2024-09-26T23:30:06.290+0000] {logging_mixin.py:188} WARNING - /opt/***/dags/etl_prueba.py:54 UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.
[2024-09-26T23:30:06.356+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-09-26T23:30:06.357+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 2262, in execute
    cur.execute(sql, *args)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 8:             AND name=?;
                              ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/decorators/base.py", line 265, in execute
    return_value = super().execute(context)
                   ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/etl_prueba.py", line 54, in read_data_from_api
    df.to_sql(TABLA, conn, schema=schema_name, if_exists='replace', index=False)
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/util/_decorators.py", line 333, in wrapper
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/core/generic.py", line 3008, in to_sql
    return sql.to_sql(
           ^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 788, in to_sql
    return pandas_sql.to_sql(
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 2438, in to_sql
    table.create()
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 925, in create
    if self.exists():
       ^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 911, in exists
    return self.pd_sql.has_table(self.name, self.schema)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 2453, in has_table
    return len(self.execute(query, [name]).fetchall()) > 0
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 2274, in execute
    raise ex from exc
pandas.errors.DatabaseError: Execution failed on sql '
        SELECT
            name
        FROM
            sqlite_master
        WHERE
            type IN ('table', 'view')
            AND name=?;
        ': syntax error at or near ";"
LINE 8:             AND name=?;
                              ^

[2024-09-26T23:30:06.522+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=example_postgres_pandas_dag_with_decorators, task_id=read_data_from_api, run_id=manual__2024-09-26T23:24:07.838919+00:00, execution_date=20240926T232407, start_date=20240926T232952, end_date=20240926T233006
[2024-09-26T23:30:06.633+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 98 for task read_data_from_api (Execution failed on sql '
        SELECT
            name
        FROM
            sqlite_master
        WHERE
            type IN ('table', 'view')
            AND name=?;
        ': syntax error at or near ";"
LINE 8:             AND name=?;
                              ^
; 94523)
[2024-09-26T23:30:06.784+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-09-26T23:30:06.969+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-09-26T23:30:07.021+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
